--- a/ElProceso/edustream/SRC/frontend/templates/public/base.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/base.html
@@ -4,25 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>{{ title }}</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&family=Instrument+Serif&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/registro.css">
+    <link rel="stylesheet" href="/static/css/login.css">
 </head>
 
 <body>
+    <div id="vanta-bg" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;"></div>
     <header>
         <div class="container">
             <header
                 class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
+                    <img src="/static/img/logo.png" alt="EduStream Logo" width="40" height="32"
+                        style="margin-right:8px;">
                 </a>
 
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 link-secondary">Inicio</a></li>
+                    <li><a href="/" class="nav-link px-2 link-secondary">Inicio</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Características</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Precios</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
@@ -30,8 +36,8 @@
                 </ul>
 
                 <div class="col-md-3 text-end">
-                    <button type="button" class="btn btn-outline-primary me-2">Ingresar</button>
-                    <button type="button" class="btn btn-primary">Registrarse</button>
+                    <button type="button" class="btn btn-outline-primary me-2"><a href="/login">Ingresar</a></button>
+                    <button type="button" class="btn btn-primary"><a href="{{ url_for('registro') }}">Registrarse</a></button>
                 </div>
             </header>
         </div>
@@ -39,9 +45,34 @@
     <main>
         {% block content %}
         {% endblock %}
+        <div class="container">
+            <footer class="container mt-5 mb-5 text-center">
+                <p>&copy; 2024 EduStream. Todos los derechos reservados.</p>
+            </footer>
+        </div>
     </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+    <script>
+        VANTA.FOG({
+            el: "#vanta-bg",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            baseColor: 0x000000,
+            highlightColor: 0x1b62fc,
+            midtoneColor: 0x000000,
+            lowlightColor: 0x000000,
+            blurFactor: 0.7,
+            speed: 1.5
+        })
+    </script>
 </body>
 
 </html>
