Se implemento el dashboard

--- a/ElProceso/edustream/SRC/frontend/templates/public/login.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/login.html
@@ -25,8 +25,7 @@
                     placeholder="Ingresa tu contraseña" required>
             </div>
             <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-            <p class="mt-3">¿No tienes una cuenta? <a href="/registro">Regístrate <span
-                        class="text-primary">aquí</span></a>.</p>
+            <p class="mt-3">¿No tienes una cuenta? <a href="/registro">Regístrate <span class="text-primary">aquí</span></a>.</p>
         </form>
     </div>
 </div>
