--- a/ElProceso/edustream/SRC/frontend/templates/public/base.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/base.html
@@ -29,7 +29,7 @@
 
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/" class="nav-link px-2 link-secondary">Inicio</a></li>
-                    <li><a href="#" class="nav-link px-2 link-dark">Características</a></li>
+                    <li><a href="/dashboard" class="nav-link px-2 link-dark">Características</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Precios</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Acerca</a></li>
