feat: implement user registration functionality and database connection

--- a/ElProceso/edustream/SRC/frontend/templates/public/registro.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/registro.html
@@ -12,7 +12,7 @@
         {% endif %}
     </div>
     <div class="form-container">
-        <form method="post" action="/registro">
+        <form method="post" action="http://localhost:8000/registro">
         <div class="mb-3">
             <label for="username" class="form-label">Nombre de usuario</label>
             <input type="text" class="form-control" id="username" name="username" placeholder="Ingresa tu nombre de usuario" required>
