--- a/ElProceso/edustream/SRC/frontend/templates/private/student/base.student.html
+++ b/ElProceso/edustream/SRC/frontend/templates/private/student/base.student.html
@@ -116,7 +116,7 @@
                     minWidth: 200.00,
                     scale: 1.00,
                     scaleMobile: 1.00,
-                    color: 0x4a5b91,
+                    color: 0x916f4a,
                     backgroundColor: 0x0
                 });
             }
