--- a/ElProceso/edustream/SRC/frontend/templates/public/base.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/base.html
@@ -36,7 +36,7 @@
                 </ul>
 
                 <div class="col-md-3 text-end">
-                    <button type="button" class="btn btn-outline-primary me-2"><a href="/login">Ingresar</a></button>
+                    <button type="button" class="btn btn-outline-primary me-2"><a href="{{ url_for('login') }}">Ingresar</a></button>
                     <button type="button" class="btn btn-primary"><a href="{{ url_for('registro') }}">Registrarse</a></button>
                 </div>
             </header>
