--- a/ElProceso/edustream/SRC/frontend/templates/public/login.html
+++ b/ElProceso/edustream/SRC/frontend/templates/public/login.html
@@ -13,10 +13,10 @@
         {% endif %}
     </div>
     <div class="form-container login">
-        <form method="get" action="/login" class="login-form">
+    <form method="post" action="http://localhost:8000/login" class="login-form">
             <div class="mb-3 email">
                 <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" name="email"
+                <input type="email" class="form-control" id="email" name="username"
                     placeholder="Ingresa tu correo electrónico" required>
             </div>
             <div class="mb-3 password">
